fixed scanned items not showing

--- a/src/pages/Borrow/Borrow.module.css
+++ b/src/pages/Borrow/Borrow.module.css
@@ -54,10 +54,10 @@ body {
   justify-content: center;
   margin: 20px 0;
 }
-
+/* Yun ani lang ang width og height kay gamay kaayo ang camera */
 .reader {
-  width: 300px;
-  height: 300px;
+  width: 1000px;
+  height: 500px;
   border: 2px solid #ccc;
   border-radius: 10px;
   display: flex;
